server/htmlparser/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    ESCAPE
    WHITESPACE

Grammar

Rule 0     S' -> element
Rule 1     element -> tag
Rule 2     element -> content
Rule 3     element -> close_tag
Rule 4     element -> close_tag element
Rule 5     element -> tag element
Rule 6     element -> content element
Rule 7     tag -> OPEN tagname attributes CLOSE
Rule 8     tag -> OPEN tagname CLOSE
Rule 9     close_tag -> OPEN_DASH tagname CLOSE
Rule 10    tagname -> WORD
Rule 11    attributes -> attribute
Rule 12    attributes -> attribute attributes
Rule 13    attribute -> WORD ASSIGN QUOTE content QUOTE
Rule 14    attribute -> WORD
Rule 15    content -> WORD
Rule 16    content -> WORD content

Terminals, with rules where they appear

ASSIGN               : 13
CLOSE                : 7 8 9
ESCAPE               : 
OPEN                 : 7 8
OPEN_DASH            : 9
QUOTE                : 13 13
WHITESPACE           : 
WORD                 : 10 13 14 15 16
error                : 

Nonterminals, with rules where they appear

attribute            : 11 12
attributes           : 7 12
close_tag            : 3 4
content              : 2 6 13 16
element              : 4 5 6 0
tag                  : 1 5
tagname              : 7 8 9

Parsing method: LALR

state 0

    (0) S' -> . element
    (1) element -> . tag
    (2) element -> . content
    (3) element -> . close_tag
    (4) element -> . close_tag element
    (5) element -> . tag element
    (6) element -> . content element
    (7) tag -> . OPEN tagname attributes CLOSE
    (8) tag -> . OPEN tagname CLOSE
    (15) content -> . WORD
    (16) content -> . WORD content
    (9) close_tag -> . OPEN_DASH tagname CLOSE

    OPEN            shift and go to state 1
    WORD            shift and go to state 2
    OPEN_DASH       shift and go to state 7

    content                        shift and go to state 5
    element                        shift and go to state 3
    close_tag                      shift and go to state 4
    tag                            shift and go to state 6

state 1

    (7) tag -> OPEN . tagname attributes CLOSE
    (8) tag -> OPEN . tagname CLOSE
    (10) tagname -> . WORD

    WORD            shift and go to state 8

    tagname                        shift and go to state 9

state 2

    (15) content -> WORD .
    (16) content -> WORD . content
    (15) content -> . WORD
    (16) content -> . WORD content

  ! shift/reduce conflict for WORD resolved as shift
    QUOTE           reduce using rule 15 (content -> WORD .)
    OPEN            reduce using rule 15 (content -> WORD .)
    OPEN_DASH       reduce using rule 15 (content -> WORD .)
    $end            reduce using rule 15 (content -> WORD .)
    WORD            shift and go to state 2

  ! WORD            [ reduce using rule 15 (content -> WORD .) ]

    content                        shift and go to state 10

state 3

    (0) S' -> element .



state 4

    (3) element -> close_tag .
    (4) element -> close_tag . element
    (1) element -> . tag
    (2) element -> . content
    (3) element -> . close_tag
    (4) element -> . close_tag element
    (5) element -> . tag element
    (6) element -> . content element
    (7) tag -> . OPEN tagname attributes CLOSE
    (8) tag -> . OPEN tagname CLOSE
    (15) content -> . WORD
    (16) content -> . WORD content
    (9) close_tag -> . OPEN_DASH tagname CLOSE

    $end            reduce using rule 3 (element -> close_tag .)
    OPEN            shift and go to state 1
    WORD            shift and go to state 2
    OPEN_DASH       shift and go to state 7

    content                        shift and go to state 5
    element                        shift and go to state 11
    close_tag                      shift and go to state 4
    tag                            shift and go to state 6

state 5

    (2) element -> content .
    (6) element -> content . element
    (1) element -> . tag
    (2) element -> . content
    (3) element -> . close_tag
    (4) element -> . close_tag element
    (5) element -> . tag element
    (6) element -> . content element
    (7) tag -> . OPEN tagname attributes CLOSE
    (8) tag -> . OPEN tagname CLOSE
    (15) content -> . WORD
    (16) content -> . WORD content
    (9) close_tag -> . OPEN_DASH tagname CLOSE

    $end            reduce using rule 2 (element -> content .)
    OPEN            shift and go to state 1
    WORD            shift and go to state 2
    OPEN_DASH       shift and go to state 7

    content                        shift and go to state 5
    element                        shift and go to state 12
    close_tag                      shift and go to state 4
    tag                            shift and go to state 6

state 6

    (1) element -> tag .
    (5) element -> tag . element
    (1) element -> . tag
    (2) element -> . content
    (3) element -> . close_tag
    (4) element -> . close_tag element
    (5) element -> . tag element
    (6) element -> . content element
    (7) tag -> . OPEN tagname attributes CLOSE
    (8) tag -> . OPEN tagname CLOSE
    (15) content -> . WORD
    (16) content -> . WORD content
    (9) close_tag -> . OPEN_DASH tagname CLOSE

    $end            reduce using rule 1 (element -> tag .)
    OPEN            shift and go to state 1
    WORD            shift and go to state 2
    OPEN_DASH       shift and go to state 7

    content                        shift and go to state 5
    element                        shift and go to state 13
    close_tag                      shift and go to state 4
    tag                            shift and go to state 6

state 7

    (9) close_tag -> OPEN_DASH . tagname CLOSE
    (10) tagname -> . WORD

    WORD            shift and go to state 8

    tagname                        shift and go to state 14

state 8

    (10) tagname -> WORD .

    CLOSE           reduce using rule 10 (tagname -> WORD .)
    WORD            reduce using rule 10 (tagname -> WORD .)


state 9

    (7) tag -> OPEN tagname . attributes CLOSE
    (8) tag -> OPEN tagname . CLOSE
    (11) attributes -> . attribute
    (12) attributes -> . attribute attributes
    (13) attribute -> . WORD ASSIGN QUOTE content QUOTE
    (14) attribute -> . WORD

    CLOSE           shift and go to state 15
    WORD            shift and go to state 16

    attribute                      shift and go to state 17
    attributes                     shift and go to state 18

state 10

    (16) content -> WORD content .

    QUOTE           reduce using rule 16 (content -> WORD content .)
    OPEN            reduce using rule 16 (content -> WORD content .)
    WORD            reduce using rule 16 (content -> WORD content .)
    OPEN_DASH       reduce using rule 16 (content -> WORD content .)
    $end            reduce using rule 16 (content -> WORD content .)


state 11

    (4) element -> close_tag element .

    $end            reduce using rule 4 (element -> close_tag element .)


state 12

    (6) element -> content element .

    $end            reduce using rule 6 (element -> content element .)


state 13

    (5) element -> tag element .

    $end            reduce using rule 5 (element -> tag element .)


state 14

    (9) close_tag -> OPEN_DASH tagname . CLOSE

    CLOSE           shift and go to state 19


state 15

    (8) tag -> OPEN tagname CLOSE .

    OPEN            reduce using rule 8 (tag -> OPEN tagname CLOSE .)
    WORD            reduce using rule 8 (tag -> OPEN tagname CLOSE .)
    OPEN_DASH       reduce using rule 8 (tag -> OPEN tagname CLOSE .)
    $end            reduce using rule 8 (tag -> OPEN tagname CLOSE .)


state 16

    (13) attribute -> WORD . ASSIGN QUOTE content QUOTE
    (14) attribute -> WORD .

    ASSIGN          shift and go to state 20
    WORD            reduce using rule 14 (attribute -> WORD .)
    CLOSE           reduce using rule 14 (attribute -> WORD .)


state 17

    (11) attributes -> attribute .
    (12) attributes -> attribute . attributes
    (11) attributes -> . attribute
    (12) attributes -> . attribute attributes
    (13) attribute -> . WORD ASSIGN QUOTE content QUOTE
    (14) attribute -> . WORD

    CLOSE           reduce using rule 11 (attributes -> attribute .)
    WORD            shift and go to state 16

    attribute                      shift and go to state 17
    attributes                     shift and go to state 21

state 18

    (7) tag -> OPEN tagname attributes . CLOSE

    CLOSE           shift and go to state 22


state 19

    (9) close_tag -> OPEN_DASH tagname CLOSE .

    OPEN            reduce using rule 9 (close_tag -> OPEN_DASH tagname CLOSE .)
    WORD            reduce using rule 9 (close_tag -> OPEN_DASH tagname CLOSE .)
    OPEN_DASH       reduce using rule 9 (close_tag -> OPEN_DASH tagname CLOSE .)
    $end            reduce using rule 9 (close_tag -> OPEN_DASH tagname CLOSE .)


state 20

    (13) attribute -> WORD ASSIGN . QUOTE content QUOTE

    QUOTE           shift and go to state 23


state 21

    (12) attributes -> attribute attributes .

    CLOSE           reduce using rule 12 (attributes -> attribute attributes .)


state 22

    (7) tag -> OPEN tagname attributes CLOSE .

    OPEN            reduce using rule 7 (tag -> OPEN tagname attributes CLOSE .)
    WORD            reduce using rule 7 (tag -> OPEN tagname attributes CLOSE .)
    OPEN_DASH       reduce using rule 7 (tag -> OPEN tagname attributes CLOSE .)
    $end            reduce using rule 7 (tag -> OPEN tagname attributes CLOSE .)


state 23

    (13) attribute -> WORD ASSIGN QUOTE . content QUOTE
    (15) content -> . WORD
    (16) content -> . WORD content

    WORD            shift and go to state 2

    content                        shift and go to state 24

state 24

    (13) attribute -> WORD ASSIGN QUOTE content . QUOTE

    QUOTE           shift and go to state 25


state 25

    (13) attribute -> WORD ASSIGN QUOTE content QUOTE .

    WORD            reduce using rule 13 (attribute -> WORD ASSIGN QUOTE content QUOTE .)
    CLOSE           reduce using rule 13 (attribute -> WORD ASSIGN QUOTE content QUOTE .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for WORD in state 2 resolved as shift
